--- a/index.html
+++ b/index.html
@@ -1,75 +1,87 @@
 <!doctype html> <html> <head> <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
 <script type="text/babel">
 
+
+  function tick() {
+
 var today = new Date();
 
 var offset = new Date().getTimezoneOffset();
 var hrs = -( offset / 60); console.log(hrs);
 
-if(hrs == 8) {
-	var phtime = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+  if(hrs == 8) {
+  	var phtime = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
 
-	var indian_minutes = ((today.getMinutes() -30) > 30) ? (today.getMinutes() - 30) : Math.abs(today.getMinutes() - 30);
-	var indian_hour = ((today.getHours() - 2) < 0) ? (today.getHours() + 10) : (today.getHours() - 2);
-	var intime = indian_hour + ":" + indian_minutes + ":" + today.getSeconds();
+  	var indian_minutes = ((today.getMinutes() -30) > 30) ? (today.getMinutes() - 30) : Math.abs(today.getMinutes() - 30);
+  	var indian_hour = ((today.getHours() - 2) < 0) ? (today.getHours() + 10) : (today.getHours() - 2);
+  	var intime = indian_hour + ":" + indian_minutes + ":" + today.getSeconds();
 
-	var es_hours = ((today.getHours() - 13) > 0) ? (today.getHours() - 13) : Math.abs((today.getHours() - 13));
-	var estime = es_hours + ":" + today.getMinutes()  + ":" + today.getSeconds();
-
-} else {
-	var phtime = null;
-	alert('App only works in PH');
-}
-
-var PhilippineTime = React.createClass({
-         render: function() {
-                  return (
-                    <div>
-                        Time in Philippines:  { phtime }
-                     </div>
-
-            )
-        }
-});
-
-var IndianStandardTime = React.createClass({
-         render: function() {
-                  return (
-                    <div>
-                        Time in India:  { intime }
-                    </div>
-                    )
-            }
-});
-
-var EasternStandardTime = React.createClass({
-         render: function() {
-                  return (
-                    <div>
-                        Time in Eastern: { estime }
-                     </div>
-                    )
-                }
-});
+  	var es_hours = ((today.getHours() - 13) > 0) ? (today.getHours() - 13) : Math.abs((today.getHours() - 13));
+  	var estime = es_hours + ":" + today.getMinutes()  + ":" + today.getSeconds();
 
 
 
 
-// ES5 way
-    var Main = React.createClass({
-          render: function() {
-                  return (
-                    <div>
-                    	<h4>You must be fans of the time :)</h4>
-                            <PhilippineTime />
-                            <IndianStandardTime />
-                            <EasternStandardTime />
-                      </div>
-                          );
-                    }
+
+
+
+   var PhilippineTime = React.createClass({
+           render: function() {
+                    return (
+                      <div>
+                          Time in Philippines:  { phtime }
+                       </div>
+
+              )
+          }
     });
 
-ReactDOM.render(<Main />, document.getElementById('root'));
+    var IndianStandardTime = React.createClass({
+           render: function() {
+                    return (
+                      <div>
+                          Time in India:  { intime }
+                      </div>
+                      )
+              }
+    });
+
+    var EasternStandardTime = React.createClass({
+           render: function() {
+                    return (
+                      <div>
+                          Time in Eastern: { estime }
+                       </div>
+                      )
+                  }
+    });
+
+
+
+
+  // ES5 way
+      var Main = React.createClass({
+            render: function() {
+                    return (
+                      <div>
+                        <h4>You must be fans of the time :)</h4>
+                              <PhilippineTime />
+                              <IndianStandardTime />
+                              <EasternStandardTime />
+                        </div>
+                            );
+                      }
+      });
+
+    } else {
+      var phtime = null;
+      alert('App only works in PH');
+  }
+
+  ReactDOM.render(<Main />, document.getElementById('root'));
+  }
+
+  setInterval(tick, 1000);
 
 </script>
     </head>
